Globalização do codigo

--- a/liga-futeba/.settings/org.eclipse.wst.common.component
+++ b/liga-futeba/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="game-date-0.0.1-SNAPSHOT">
+    <wb-module deploy-name="futeba-0.0.1-SNAPSHOT">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <property name="java-output-path" value="/game-date/target/classes"/>
-        <property name="context-root" value="game-date"/>
+        <property name="java-output-path" value="/futeba/target/classes"/>
+        <property name="context-root" value="futeba"/>
     </wb-module>
 </project-modules>
